@@ -33,11 +33,27 @@
 
 using namespace scheme;
 
+static bool checkAndSetVisited(EqHashTable* visited, Object object1, Object object2)
+{
+    const Object visitedList = visited->ref(object1, Object::Undef);
+    if (visitedList.isUndef()) {
+        visited->set(object1, Object::Nil);
+        return false;
+    } else {
+        for (Object p = visitedList; p.isPair(); p = p.cdr()) {
+            if (p.car() == object2) {
+                return true;
+            }
+        }
+        visited->set(object1, Object::cons(object2, visitedList));
+        return false;
+    }
+}
+
 bool scheme::equal(Object obj1, Object obj2, EqHashTable* visited)
 {
     Object object1 = obj1;
     Object object2 = obj2;
-
 entry:
     if (object1 == object2) {
         return true;
@@ -45,7 +61,9 @@ entry:
 
     if (object1.isPair()) {
         if (object2.isPair()) {
-            if (equal(object1.car(), object2.car(), visited)) {
+            if (checkAndSetVisited(visited, object1, object2)) {
+                return true;
+            } else if (equal(object1.car(), object2.car(), visited)) {
                 object1 = object1.cdr();
                 object2 = object2.cdr();
                 goto entry;
@@ -59,6 +77,9 @@ entry:
 
     if (object1.isVector()) {
         if (object2.isVector()) {
+            if (checkAndSetVisited(visited, object1, object2)) {
+                return true;
+            }
             Vector* const vector1 = object1.toVector();
             Vector* const vector2 = object2.toVector();
             if (vector1->length() == vector2->length()) {
@@ -82,6 +103,36 @@ entry:
             String* const string1 = object1.toString();
             String* const string2 = object2.toString();
             return string1->data() == string2->data();
+        } else {
+            return false;
+        }
+    }
+
+    if (object1.isRegexp()) {
+        if (object2.isRegexp()) {
+            Regexp* const regexp1 = object1.toRegexp();
+            Regexp* const regexp2 = object2.toRegexp();
+            return regexp1->pattern() == regexp2->pattern();
+        } else {
+            return false;
+        }
+    }
+
+    if (object1.isCProcedure()) {
+        if (object2.isCProcedure()) {
+            CProcedure* const cprocedure1 = object1.toCProcedure();
+            CProcedure* const cprocedure2 = object2.toCProcedure();
+            return cprocedure1->proc == cprocedure2->proc;
+        } else {
+            return false;
+        }
+    }
+
+    if (object1.isRecord()) {
+        if (object2.isRecord()) {
+            Record* const record1 = object1.toRecord();
+            Record* const record2 = object2.toRecord();
+            return record1->rtd() == record2->rtd();
         } else {
             return false;
         }
